<resources>
    <!--App related data-->
    <string name="app_name">MediScreen</string>

    <!--Activities-->
    <string name="homeTitle">Home</string>
    <string name="loginTitle">Login</string>
    <string name="registerTitle">Create an account</string>
    <string name="mainTitle">MediScreen</string>
    <string name="supportTitle">Support</string>
    <string name="diagnosisTitle">Diagnosis</string>
    <string name="feedbackTitle">Feedback</string>
    <string name="profileTitle">Profile</string>
    <string name="helpTitle">Help</string>


    <!--Notification-->

    <!--AlertDialog-->

    <!--Buttons-->
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="resetButton">Reset</string>
    <string name="forgotPasswordButton">Trouble signing in?</string>
    <string name="supportButton">Support</string>
    <string name="callButton">Call</string>
    <string name="aiButton">Diagnosis</string>
    <string name="feedbackButton">Feedback</string>
    <string name="profileButton">Profile</string>
    <string name="helpButton">Help</string>


</resources>
